home-page.yaml
# home-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-page-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-page-service
  template:
    metadata:
      labels:
        app: home-page-service
    spec:
      containers:
        - name: home-page-service
          image: gowthamk21/bits-secure-assignment:home-page
          ports:
            - containerPort: 5000
