combined-service.yaml
# combined-services.yaml

# Service for home page service
apiVersion: v1
kind: Service
metadata:
  name: home-page-service
spec:
  selector:
    app: home-page-service
  ports:
    - protocol: TCP
      port: 81
      targetPort: 5000

---

# Service for order service
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
